RF: I18n text extraction
and a little cleanup of the form

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,4 +34,5 @@ en:
   create_error: "%{errors} prohibited this %{model} from being created"
   enter: "enter"
   error: "error"
+  game_name_help: "You'll choose this name on the big-screen display."
   new: "new"
