--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -42,3 +42,4 @@ en:
   new: "new"
   one_assassin_required: "There must be exactly one assassin (black)"
   only_spymaster_can_update: "Only the spymaster can update the game"
+  pin: "PIN"
